<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">K&amp;JSUPTEC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!--Local Users Stuff-->
    <string name="local_admin_name">Administrador</string>
    <string name="local_admin_default_password">Aldana2015</string>
    <string name="local_user_name">Usuario</string>
    <string name="local_user_default_password">Aldana2015</string>

    <!--Custom Parse elements-->
    <string name="parse_app_id">rGeeZToF8FENkt9IXDWfAaZTrJume1WM4Bil5VfJ</string>
    <string name="parse_client_key">iTWNnF9u0lbltNFzIQHJdt73D4B6Oi6lNtoJfL3P</string>

    <!--Login Stuff-->
    <string name="acceder">Acceder</string>
    <string name="show_dialog">No hay conexión a internet\n ¿Desea iniciar como local?</string>
    <string name="wrong_data">Usuario o contraseña erróneos</string>

    <!--Main Activity Stuff-->
    <string name="evidence_check">No ha ingresado ninguna evidencia, ¿Desea guardarlo sin evidencia?</string>
    <string name="incomplete_check">El formulario se encuentra incompleto, ¿Desea guardarlo así?</string>

    <string name="FST001_TITULO">EMPAQUE Y ROTULADO DE CEMENTO - FST001</string>
    <string name="FST002_TITULO">EVALUACIÓN ASENTAMIENTO DE CONCRETO - FST002</string>
    <string name="FST003_TITULO">VERIFICACIÓN CONDICIONES DE CIMENTACIÓN - FST003</string>
    <string name="FST004_TITULO">MEZCLA, TRANSPORTE, COLOCACIÓN Y CURADO DE CONCRETOS - FST004</string>
    <string name="FST005_TITULO">CONSTRUCCIÓN DE FORMALETAS Y OBRA FALSA - FST005</string>
    <string name="FST006_TITULO">COLOCACIÓN ACERO DE REFUERZO - FST006</string>
    <string name="FST007_TITULO">ACEPTACIÓN DE ELEMENTOS VACIADOS - FST007</string>
    <string name="FST008_TITULO">REQUISITOS DE EJECUCIÓN - MUROS Y ELEMENTOS DE MAMPOSTERÍA - FST008</string>
    <string name="FST009_TITULO">LIBERACIÓN DE ELEMENTOS PARA VACIADO - FST009</string>
    <string name="memo_expres">MEMO EXPRES</string>
    <string name="incompletos">INCOMPLETOS</string>

    <string name="title_activity_local_user_init">LocalUserInitActivity</string>
    <string name="proyecto">Proyecto</string>
    <string name="reviso">Revisó</string>
    <string name="aprobo">Aprobó</string>
    <string name="continuar">Continuar</string>
    <string name="desea_descartarlo">"¿Desea descartarlo? "</string>
    <string name="recordarme">Recordarme</string>
    <string name="confirm_prompt_password">Confirmar contraseña</string>
    <string name="local_admin">Administrador local</string>
    <string name="update">Actualizar</string>
    <string name="local_user">Usuario local</string>
    <string name="error_passwords_dont_match">Las contraseñas no coinciden</string>
    <string name="password_updated">Contraseña actualizada exitosamente</string>
    <string name="new_formulario">Nuevo formulario</string>
    <string name="cerrar_sesion">Logout</string>
    <string name="administrar_usuarios">Administrar Usuarios</string>
    <string name="campos_vacios_memo_expres">Alguno de los campos está vacío, por favor ingréselo</string>
    <string name="anexo_fotografico_1">Anexo Fotográfico 1</string>
    <string name="anexo_fotografico_2">Anexo Fotográfico 2</string>

</resources>