<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center|center_horizontal"
    android:background="@drawable/login"
    tools:context="app.kyjsuptec.kjingenieros.activities.LocalUserInitActivity">


    <EditText
        style="@style/LoginElement"
        android:id="@+id/proyecto"
        android:hint="@string/proyecto"
        android:maxLength="4"
        android:layout_below="@+id/email" />


    <EditText
        style="@style/LoginElement"
        android:id="@+id/reviso"
        android:hint="@string/reviso"
        android:maxLength="4"
        android:layout_below="@+id/proyecto" />


    <EditText
        style="@style/LoginElement"
        android:id="@+id/aprobo"
        android:hint="@string/aprobo"
        android:maxLength="4"
        android:layout_below="@+id/reviso" />

    <Button
        android:id="@+id/continuar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/aprobo"
        android:text="@string/continuar"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:background="@color/edit_text_login_background" />

</RelativeLayout>
