<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_admin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/textViewAdministradorLocal" />

    <EditText
        style="@style/LoginElement"
        android:id="@+id/passwordAdministradorLocal"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_below="@+id/email" />

    <EditText
        style="@style/LoginElement"
        android:id="@+id/confirmPasswordAdminitradorLocal"
        android:hint="@string/confirm_prompt_password"
        android:inputType="textPassword"
        android:layout_below="@+id/email" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/buttonActualizarAdministradorLocal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_user"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/textViewUsuarioLocal" />


    <EditText
        style="@style/LoginElement"
        android:id="@+id/passwordUsuarioLocal"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_below="@+id/email" />

    <EditText
        style="@style/LoginElement"
        android:id="@+id/confirmPasswordUsuarioLocal"
        android:hint="@string/confirm_prompt_password"
        android:inputType="textPassword"
        android:layout_below="@+id/email" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/buttonActualizarUsuarioLocal" />

</LinearLayout>